# py-tabulator

./: .gitignore  404.html  LICENSE  README.md  _table_options.txt  get-py-bindings.sh  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml
.github/workflows/: pytest.yml
api/: index.html
changelog/: index.html
columns/: index.html
concept/themes/: index.html
docs/: api.md  changelog.md  columns.md  events.md  example.md  index.md  table.md
docs/concept/: themes.md
docs/examples/edit_data/: app.py  index.md
docs/examples/exports/: app.py  index.md
docs/examples/getting_started/: app.py  shiny_core_basic.py  shiny_core_multi_row_headers.py  shiny_express.py  shiny_express_all.py  shiny_express_all_new_style.py  shiny_express_basic.py  shiny_express_experimental.py  shiny_express_filters.py  (+1 more)
events/: index.html
example/: index.html
examples/edit_data/: index.html
examples/exports/: index.html
examples/getting_started/: app.py  shiny_express_all.py
examples/themes/: index.html
pytabulator/: __init__.py  _abstracts.py  _table_options_dc.py  _table_options_pydantic.py  _types.py  _utils.py  data.py  editors.py  experimental.py  formatters.py  shiny_bindings.py  shiny_render.py  shiny_ui.py  tabulator.py  tabulator_context.py  tabulator_options.py  theme.py  themes.py  ui.py  utils.py
pytabulator/srcjs/: get-tabulator.sh  get-themes.sh  pytabulator.js  tabulator-bindings.js
r-bindings/: rtabulator.js
search/: search_index.json
srcjs/: events.js  index-r.js  index.js  utils.js  widget.js
table/: index.html
tabylator/: __init__.py  shiny_bindings.py  tabulator.py
tabylator/srcjs/: tabulator-bindings.js
tests/: conftest.py  test_create_columns.py  test_snake_to_camel_case.py  test_table.py  test_table_options.py  test_tabulator_columns.py
(+2 files in other folders)
