[tool.poetry]
name = "pytabulator"
version = "0.2.1"
description = "Shiny bindings for Tabulator JS"
authors = ["Stefan Kuethe <stefan.kuethe@eoda.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
shiny = "^0.7.0"
pandas = ">=1.5.3"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pytest = "^8.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
