[tool.poetry]
name = "pytabulator"
version = "0.2.3"
description = "Shiny bindings for Tabulator JS"
authors = ["Stefan Kuethe <stefan.kuethe@eoda.de>"]
readme = "README.md"
license = "MIT"
exclude = ["pytabulator/srcjs/get-themes.sh"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
shiny = "^0.7.0"
pandas = "*"
pydantic = {version = "^2.6.1", optional = true}

[tool.poetry.extras]
all = ["pydantic"]
pydantic = ["pydantic"]

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pytest = "^8.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
